moved survey results into own class.

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<h1>you answered {{ userResponse }} </h1>
-	<h2>total {{ sweetCount }} people voted for Sweet Potatoes</h2>
-	<h2>total {{ russetCount }} people voted for Russet Potatoes</h2>
-	<h2>total {{ goldenCount }} people voted for Golden Potatoes</h2>
+	<h2>total {{ results.sweetTotal }} people voted for Sweet Potatoes</h2>
+	<h2>total {{ results.russetTotal }} people voted for Russet Potatoes</h2>
+	<h2>total {{ results.goldenTotal }} people voted for Golden Potatoes</h2>
 </body>
 </html>
