--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="utf8">
+<title>Survey Results</title>
 </head>
 <body>
 	<h1>you answered {{ userResponse }} </h1>
